Fix controller parameter name spell wrong problem
Fix controller parameter name spell wrong problem, the controller parameter should be "extSysId" ,not "exrSysId"

SDNO-1176

Signed-off-by: angilecoder <zhaoyangzhao.zhaoyang@huawei.com>
Change-Id: I2ba33998a4587928ae6012b30a55a547b461ffaa

--- a/docs/route/sbi_route.yaml
+++ b/docs/route/sbi_route.yaml
@@ -37,7 +37,7 @@ paths:
       parameters:
         - name: X-Driver-Parameter
           in: header
-          description: additional driver-related parameters, current format is "exrSysId={ctrlUuid}",and drivermgr will find out driver instance by controller
+          description: additional driver-related parameters, current format is "extSysId={ctrlUuid}",and drivermgr will find out driver instance by controller
           required: true
           type: string
         - name: sbiRoutes
@@ -70,7 +70,7 @@ paths:
       parameters:
         - name: X-Driver-Parameter
           in: header
-          description: additional driver-related parameters, current format is "exrSysId={ctrlUuid}",and drivermgr will find out driver instance by controller
+          description: additional driver-related parameters, current format is "extSysId={ctrlUuid}",and drivermgr will find out driver instance by controller
           required: true
           type: string
         - name: sbiRoutes
@@ -103,7 +103,7 @@ paths:
       parameters:
         - name: X-Driver-Parameter
           in: header
-          description: additional driver-related parameters, current format is "exrSysId={ctrlUuid}",and drivermgr will find out driver instance by controller
+          description: additional driver-related parameters, current format is "extSysId={ctrlUuid}",and drivermgr will find out driver instance by controller
           required: true
           type: string
         - name: sbiRoutes
@@ -136,7 +136,7 @@ paths:
       parameters:
         - name: X-Driver-Parameter
           in: header
-          description: additional driver-related parameters, current format is "exrSysId={ctrlUuid}",and drivermgr will find out driver instance by controller
+          description: additional driver-related parameters, current format is "extSysId={ctrlUuid}",and drivermgr will find out driver instance by controller
           required: true
           type: string
         - name: deviceid
@@ -174,7 +174,7 @@ paths:
       parameters:
         - name: X-Driver-Parameter
           in: header
-          description: additional driver-related parameters, current format is "exrSysId={ctrlUuid}",and drivermgr will find out driver instance by controller
+          description: additional driver-related parameters, current format is "extSysId={ctrlUuid}",and drivermgr will find out driver instance by controller
           required: true
           type: string
         - name: sbiRoutes
@@ -207,7 +207,7 @@ paths:
       parameters:
         - name: X-Driver-Parameter
           in: header
-          description: additional driver-related parameters, current format is "exrSysId={ctrlUuid}",and drivermgr will find out driver instance by controller
+          description: additional driver-related parameters, current format is "extSysId={ctrlUuid}",and drivermgr will find out driver instance by controller
           required: true
           type: string
         - name: sbiRoutes
@@ -240,7 +240,7 @@ paths:
       parameters:
         - name: X-Driver-Parameter
           in: header
-          description: additional driver-related parameters, current format is "exrSysId={ctrlUuid}",and drivermgr will find out driver instance by controller
+          description: additional driver-related parameters, current format is "extSysId={ctrlUuid}",and drivermgr will find out driver instance by controller
           required: true
           type: string
         - name: sbiRoutes
@@ -273,7 +273,7 @@ paths:
       parameters:
         - name: X-Driver-Parameter
           in: header
-          description: additional driver-related parameters, current format is "exrSysId={ctrlUuid}",and drivermgr will find out driver instance by controller
+          description: additional driver-related parameters, current format is "extSysId={ctrlUuid}",and drivermgr will find out driver instance by controller
           required: true
           type: string
         - name: deviceid
@@ -311,7 +311,7 @@ paths:
       parameters:
         - name: X-Driver-Parameter
           in: header
-          description: additional driver-related parameters, current format is "exrSysId={ctrlUuid}",and drivermgr will find out driver instance by controller
+          description: additional driver-related parameters, current format is "extSysId={ctrlUuid}",and drivermgr will find out driver instance by controller
           required: true
           type: string
         - name: deviceid
@@ -349,7 +349,7 @@ paths:
       parameters:
         - name: X-Driver-Parameter
           in: header
-          description: additional driver-related parameters, current format is "exrSysId={ctrlUuid}",and drivermgr will find out driver instance by controller
+          description: additional driver-related parameters, current format is "extSysId={ctrlUuid}",and drivermgr will find out driver instance by controller
           required: true
           type: string
         - name: deviceid
@@ -387,7 +387,7 @@ paths:
       parameters:
         - name: X-Driver-Parameter
           in: header
-          description: additional driver-related parameters, current format is "exrSysId={ctrlUuid}",and drivermgr will find out driver instance by controller
+          description: additional driver-related parameters, current format is "extSysId={ctrlUuid}",and drivermgr will find out driver instance by controller
           required: true
           type: string
         - name: deviceid
@@ -425,7 +425,7 @@ paths:
       parameters:
         - name: X-Driver-Parameter
           in: header
-          description: additional driver-related parameters, current format is "exrSysId={ctrlUuid}",and drivermgr will find out driver instance by controller
+          description: additional driver-related parameters, current format is "extSysId={ctrlUuid}",and drivermgr will find out driver instance by controller
           required: true
           type: string
         - name: deviceid
