--- a/docs/vxlan/sbi_vxlan.yaml
+++ b/docs/vxlan/sbi_vxlan.yaml
@@ -38,7 +38,7 @@ paths:
       parameters:
         - name: X-Driver-Parameter
           in: header
-          description: additional driver-related parameters, current format is "exrSysId={ctrlUuid}",and drivermgr will find out driver instance by controller
+          description: additional driver-related parameters, current format is "extSysId={ctrlUuid}",and drivermgr will find out driver instance by controller
           required: true
           type: string
           format: uuid
@@ -63,7 +63,7 @@ paths:
           description: Not Found
         500:
           description: Internal Server Error
-          
+
   /batch-query-vxlan:
     post:
       tags:
@@ -73,7 +73,7 @@ paths:
       parameters:
         - name: X-Driver-Parameter
           in: header
-          description: additional driver-related parameters, current format is "exrSysId={ctrlUuid}",and drivermgr will find out driver instance by controller
+          description: additional driver-related parameters, current format is "extSysId={ctrlUuid}",and drivermgr will find out driver instance by controller
           required: true
           type: string
           format: uuid
@@ -100,7 +100,7 @@ paths:
       parameters:
         - name: X-Driver-Parameter
           in: header
-          description: additional driver-related parameters, current format is "exrSysId={ctrlUuid}",and drivermgr will find out driver instance by controller
+          description: additional driver-related parameters, current format is "extSysId={ctrlUuid}",and drivermgr will find out driver instance by controller
           required: true
           type: string
           format: uuid
@@ -135,7 +135,7 @@ paths:
       parameters:
         - name: X-Driver-Parameter
           in: header
-          description: additional driver-related parameters, current format is "exrSysId={ctrlUuid}",and drivermgr will find out driver instance by controller
+          description: additional driver-related parameters, current format is "extSysId={ctrlUuid}",and drivermgr will find out driver instance by controller
           required: true
           type: string
           format: uuid
