Exclude model classes from cbb code-coverage
models in cbb are used by othere projects instead of self,
model classes is trivial and very simple,
it is meaningless to write test code on model just for coverage.

Add exclude rule **/model/** in plugin configuration
to exclude model classes.

SDNO-1315

Change-Id: I499a2f27e7b21cc685eaa7b8762ac3b29e4c3965
Signed-off-by: Chen Cang <cang.chen@huawei.com>

--- a/cbb/pom.xml
+++ b/cbb/pom.xml
@@ -154,5 +154,24 @@
         </dependency>
     </dependencies>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
+                <version>${jacoco.version}</version>
+                <configuration>
+                    <excludes>
+                        <exclude>**/gen/**</exclude>
+                        <exclude>**/generated-sources/**</exclude>
+                        <exclude>**/yang-gen/**</exclude>
+                        <exclude>**/pax/**</exclude>
+                        <exclude>**/model/**</exclude>
+                    </excludes>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
     <name>sdno-overlay/cbb</name>
 </project>
